# DriftOpus

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: benchmark_driftguard.py
driftguard/: __init__.py  analyzer.py  cli.py  exceptions.py  models.py
driftguard/configs/: __init__.py  defaults.py
driftguard/core/: __init__.py  analysis.py  registry.py
driftguard/distances/: __init__.py  advanced.py  core.py
driftguard/reporting/: __init__.py  html.py  pdf.py  window.py
driftguard/statistics/: __init__.py  categorical.py  numeric.py  pure.py  shared.py
driftguard/utils/: __init__.py  logging.py  sampling.py  serialization.py
driftguard/validators/: __init__.py  dataframe.py
driftguard/visualization/: __init__.py  charts.py
examples/: basic_usage.py  tutorial.ipynb
examples/sample_data/: current.csv  reference.csv
tests/: conftest.py  test_analyzer.py  test_reporting_and_cli.py  test_statistics_categorical.py  test_statistics_numeric.py  test_validators.py  test_window.py
