[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driftguard"
version = "0.1.0"
description = "Enterprise-grade drift detection, distribution comparison, and dataset validation."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Omprakash_S Anbarasan_P_M" }]
dependencies = [
  "numpy>=1.26",
  "pandas>=1.5",
  "matplotlib>=3.7",
  "plotly>=5.18",
  "jinja2>=3.1",
  "pydantic>=1.10",
  "joblib>=1.3",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
window = ["PyQt5>=5.15"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.4", "black>=24", "mypy>=1.8"]

[project.scripts]
driftguard = "driftguard.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["driftguard*"]
